--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,18 @@
+
 .homePageWrapper {
     display: flex;
     align-items: center;
     justify-content: center;
     color: #fff;
     height: 100vh;
+    /* padding: 1rem; */
     background-color: #ff6060;
 }
 
 .roomidbox{
   position: relative;
   display: flex;
+  color: black;
 }
 
 
@@ -18,8 +21,8 @@
   width: fit-content;
   position: absolute;
   padding: 5px;
-  right: 3%;
-  top: 15%;
+  right: 7%;
+  top: 22%;
   padding-bottom: 2px;
   border-radius: 0.5rem;
   border: 1px solid #ccc;
@@ -35,6 +38,8 @@
 
 .roomidinput{
   padding: 0.7rem;
+  width: 100%;
+  color: black;
   font-weight: bold;
   border-radius: 0.5rem;
 }
@@ -53,12 +58,15 @@
 
 .heading{
     text-align: center;
+    margin-bottom: 1rem;
+    font-size: 1.5rem;
+    font-weight: bold;
     margin-top: 0;
 }
 
 .formWrapper {
     background: #282a36;
-    padding: 20px;
+    padding: 1.5rem 2rem;
     border-radius: 10px;
     width: 400px;
     max-width: 90%;
@@ -96,6 +104,7 @@ footer a {
     border-radius: 5px;
     outline: none;
     border: none;
+    color: black;
     margin-bottom: 18px;
     background: #eee;
     font-size: 16px;
@@ -144,7 +153,7 @@ footer a:hover {
 
 .mainWrap {
     display: grid;
-    grid-template-columns: 230px 1fr;
+    grid-template-columns: 20% 80%;
 }
 
 .aside {
@@ -161,8 +170,11 @@ footer a:hover {
 .clientsList {
     display: flex;
     align-items: center;
+    justify-content: center;
     flex-wrap: wrap;
     gap: 20px;
+    margin-top: 1rem;
+    /* overflow-y: scroll; */
 }
 
 .client {
@@ -170,9 +182,14 @@ footer a:hover {
     align-items: center;
     flex-direction: column;
     font-weight: bold;
+    width: 80%;
+    background: wheat;
+    border-radius: 0.5rem;
 }
 .userName {
-    margin-top: 10px;
+  padding: 0.2rem;
+  color: black;
+  
 }
 
 .logo {
