--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+
+
+.headerfont{
+  font-family: 'Luckiest Guy', cursive;
+}
+
 
 .homePageWrapper {
     display: flex;
@@ -476,3 +483,5 @@ pre.line-numbers > code {
 	padding-right: 0.8em;
 	text-align: right;
 }
+
+
